# stm

./: .gitignore  CMakeLists.txt  README
cmake/: FindLATEX.cmake  FindMETIS.cmake  conflags.cmake  confprefix.cmake  options.cmake
doc/: CMakeLists.txt  stmain.tex
doc/content/: stm-conf.tex  stm-io.tex
lib/: .gitignore  CMakeLists.txt
script/: cscope_gen.sh
src/: CMakeLists.txt  mtis.f90  stdpol.f90  stgeom.f90  sthead.f90  stiso_fortran_env.f90  stmain.f90  stmtis.f90  stmtis.for  stoput.f90  stovtk.f90  stpmpi.f90  stread.f90  stutils.f90  stwell.f90  testwell.f90
test/: CMakeLists.txt
